# mcu-mini-programs

camera-esp32-s-camera/src/: main.cpp
esp32_laser_sms/: Cargo.toml  sdkconfig.defaults
esp32_laser_sms/src/: lib.rs
esp32_laser_sms/src/core/: mod.rs
esp32_laser_sms/src/core/device/: mod.rs
esp32_laser_sms/src/core/device_state/: mod.rs
esp32_laser_sms/src/core/persistent_state/: mod.rs
esp32_laser_sms/src/core/wifi/: mod.rs
esp32_laser_sms/src/html/: index.html
esp32_laser_sms/src/service/: mod.rs
esp32_laser_sms/src/service/http/: mod.rs  router.rs
esp32_laser_sms/src/service/http/common/: mod.rs
esp32_laser_sms/src/service/http/handler/: ble.rs  device.rs  disenser.rs  meal_plans.rs  mod.rs  ping.rs  wifi.rs
esp32_laser_sms/src/service/state/: mod.rs
esp32_laser_sms/src/util/: collection.rs  convert.rs  delay.rs  ffi.rs  math.rs  mod.rs  result.rs  sync.rs  tracing.rs
rfid_lock/master/: platformio.ini
rfid_lock/master-cpp/: platformio.ini
rfid_lock/master-cpp/src/: main.cpp
rfid_lock/master/partition/: 4mb.csv
rfid_lock/master/src/: lib.rs  main.cpp
rfid_lock/master/src/util/: result.rs
rfid_lock/slave/: .gitignore  Cargo.toml  build.rs
rfid_lock/slave/.cargo/: config.toml
rfid_lock/slave/src/: lib.rs  main.cpp  main.rs
rfid_lock/slave/src/util/: mod.rs  tracing.rs
rfid_lock_wemos_d1_r32/: platformio.ini
rfid_lock_wemos_d1_r32/src/: main.cpp
smart-trash-can/: platformio.ini
smart-trash-can/src/: main.cpp
smart_trash_can_color/: platformio.ini
smart_trash_can_color/src/: main.cpp
smart_trash_can_color_esp32/: platformio.ini
smart_trash_can_color_esp32/src/: main.cpp
