[package]
name = "firmware-esp32"
resolver = "2"
rust-version = "1.77.0"
edition = "2021"
version = "0.1.0"
authors = ["Clarence Manuel <rencedm112@gmail.com>"]

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "debuginfo"

[profile.dev]
lto = "thin"
debug = "full"    #Symbols are nice and they don't increase the size on Flash
opt-level = "z"
codegen-units = 1

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
thiserror = { version = "1.0.58" }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48.1", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
enum_dispatch = { version = "0.3.13" }
enumset = { version = "1.1.3", features = ["serde"] }
num = { version = "0.4.1", features = ["serde", "rand"] }
time = { version = "0.3.34", features = [
    "serde",
    "macros",
    "parsing",
    "serde-human-readable",
] }
embedded-svc = { version = "0.27.1", features = ["use_serde"] }
eyre = { version = "0.6.12" }
parking_lot = { version = "0.12.1", features = ["serde", "send_guard"] }
heapless = { version = "0.8.0", features = ["serde", "portable-atomic"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
scopeguard = "1.2.0"
rustc-hash = "1.1.0"
tracing-error = "0.2.0"
ciborium = "0.2.2"
lockfree = "0.5.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
derivative = "2.2.0"
itertools = "0.12.1"
embedded-hal = "1.0.0"
serde_json = "1.0.115"
once_cell = "1.19.0"
mime = "0.3.17"
http = "1.1.0"
serde_urlencoded = "0.7.1"
base64 = "0.22.0"
urlencoding = "2.1.3"

[build-dependencies]
embuild = "0.31.4"
esp-idf-part = "0.5.0"
eyre = { version = "0.6.12" }
